feat: Update header styles and improve image source in index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <!-- Header -->
     <header class="header-container">
       <div class="header">
-        <img src="/assets/me-img.jpg" alt="Una imagen del creador" />
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWIffo1U4UPt2jv0v8eLRp83nvVzouqbVJNg&s"
+          alt="Una imagen del creador"
+        />
         <nav class="navar">
           <a href="/">Inicio</a>
           <a href="/about">About</a>
