--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio | by Emmanul</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <!-- Inpor Fots -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
