--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <!-- Script -->
-    <script type="module" src="/js/showProjects.js"></script>
+    <script type="module" src="js/showProjects.js"></script>
   </head>
   <body>
     <!-- div the Background -->
