--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header-container">
       <div class="header">
         <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWIffo1U4UPt2jv0v8eLRp83nvVzouqbVJNg&s"
+          src="https://i.pinimg.com/736x/5c/cd/4a/5ccd4a69afd334215c2b27017c77c234.jpg"
           alt="Una imagen del creador"
         />
         <nav class="navar">
